'软引用结合LRU算法实现内存缓存'